--- a/src/Component/skill/Skill.css
+++ b/src/Component/skill/Skill.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    text-align: justify;
     margin-top: 0;
     /* background-color: blue; */
 }
