--- a/src/Component/contact/Contact.css
+++ b/src/Component/contact/Contact.css
@@ -51,7 +51,7 @@
 .ClientForm {
     display: flex;
     flex-direction: column;
-    padding: 4rem 2rem;
+    padding: 3rem 2rem;
     margin: 1rem auto;
 }
 
@@ -61,9 +61,17 @@
     max-width: 100%;
 }
 
+.recaptcha {
+    margin-top: .3rem;
+    margin-bottom: 1rem;
+    transform: scale(1);
+    transform-origin: center center;
+    
+}
 .submit-btn {
+    margin-left: 0;
     height: 3.2rem;
-    max-width:  50%;
+    max-width:  19rem
 }
 
 @media screen and (max-width:1011px) {
@@ -79,6 +87,22 @@
         align-items: center;
     }
     .submit-btn {
-        width: 40%;
+        width: 20rem;
+    }
+}
+@media screen and (max-width: 600px) {
+    .recaptcha {
+        transform: scale(0.9);
+    }
+    .submit-btn {
+        width: 17rem;
+    }
+}
+@media screen and (max-width: 435px) {
+    .recaptcha {
+        transform: scale(0.8);
+    }
+    .submit-btn {
+        width: 15rem;
     }
 }
